@@ -116,6 +116,7 @@ class HtmlCss(Renderer):
         return """
         <html>
         <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <style type="text/css">
         %s
         </style>
