@@ -14,22 +14,24 @@ last_error = ""
 answer = None
 
 class Widget(MainWidget):
-        
+
     def activate(self):
         self.review_controller().reset()
 
     def show_information(self, message):
+        #print message
         if message.startswith("Warning: "):
             return 0
         if message.startswith("Ignoring unparsable file"):
             return 0
         if message.startswith("You appear"):
-            return 0        
+            return 0
         raise NotImplementedError
 
     def show_error(self, message):
         global last_error
         last_error = message
+        #print message
         if message.startswith("These cards seem to have been imported before"):
             return
         if message.startswith("Unable to open"):
@@ -41,7 +43,7 @@ class Widget(MainWidget):
         if message.startswith("XML file does not seem"):
             return
         raise NotImplementedError
-    
+
     def show_question(self, question, option0, option1, option2):
         return answer
 
@@ -49,17 +51,17 @@ class Widget(MainWidget):
 class TestMnemosyne1XMLImport(MnemosyneTest):
 
     def setup(self):
-        shutil.rmtree("dot_test", ignore_errors=True)        
+        shutil.rmtree("dot_test", ignore_errors=True)
         self.mnemosyne = Mnemosyne(upload_science_logs=False, interested_in_old_reps=True)
         self.mnemosyne.components.insert(0,
            ("mnemosyne.libmnemosyne.translators.gettext_translator", "GetTextTranslator"))
         self.mnemosyne.components.append(\
-            ("mnemosyne_test", "TestReviewWidget"))       
+            ("mnemosyne_test", "TestReviewWidget"))
         self.mnemosyne.components.append(\
             ("test_mnemosyne1xml_import", "Widget"))
         self.mnemosyne.initialise(os.path.abspath("dot_test"), automatic_upgrades=False)
         self.review_controller().reset()
-        
+
     def xml_importer(self):
         for format in self.mnemosyne.component_manager.all("file_format"):
             if format.__class__.__name__ == "Mnemosyne1XML":
@@ -69,7 +71,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         filename = os.path.join(os.getcwd(), "tests", "files", "nothere.xml")
         self.xml_importer().do_import(filename)
         assert last_error.startswith("Unable to open")
-       
+
     def test_wrong_format(self):
         filename = os.path.join(os.getcwd(), "tests", "files", "wrong_format.xml")
         self.xml_importer().do_import(filename)
@@ -99,7 +101,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert card.last_rep == 1247529600
         assert card.next_rep == 1247616000
         assert card.id == "9cff728f"
-        
+
     def test_card_type_1_abort(self):
         global answer
         answer = 1
@@ -107,7 +109,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         self.xml_importer().do_import(filename)
         self.review_controller().reset()
         assert self.database().card_count() == 0
-        
+
     def test_card_type_1_unseen(self):
         global answer
         answer = 0
@@ -128,7 +130,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
             (EventTypes.ADDED_CARD, )).fetchone()[0] == 1
-        
+
     def test_card_type_1_edited(self):
         filename = os.path.join(os.getcwd(), "tests", "files", "1sided.xml")
         self.xml_importer().do_import(filename)
@@ -140,7 +142,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         filename = os.path.join(os.getcwd(), "tests", "files", "1sided.xml")
         self.xml_importer().do_import(filename)
         assert last_error.startswith("These cards seem to have been imported before")
-        
+
     def test_card_type_2(self):
         global answer
         answer = 0
@@ -150,7 +152,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().card_count() == 2
         card_1 = self.review_controller().card
         assert "question" in card_1.question()
-        assert "answer" in card_1.answer()        
+        assert "answer" in card_1.answer()
         cards = self.database().cards_from_fact(card_1.fact)
         if cards[0] == card_1:
             card_2 = cards[1]
@@ -160,8 +162,8 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert "answer" in card_2.question()
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
-            (EventTypes.ADDED_CARD, )).fetchone()[0] == 2 
-        
+            (EventTypes.ADDED_CARD, )).fetchone()[0] == 2
+
     def test_card_type_3(self):
         global answer
         answer = 0
@@ -174,7 +176,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
             (EventTypes.ADDED_CARD, )).fetchone()[0] == 2
-        
+
     def test_card_type_3_corrupt(self):
         global answer
         answer = 0
@@ -187,7 +189,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
             (EventTypes.ADDED_CARD, )).fetchone()[0] == 2
-        
+
     def test_card_type_3_missing(self):
         global answer
         answer = 0
@@ -200,12 +202,12 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
             (EventTypes.ADDED_CARD, )).fetchone()[0] == 1
-        
+
     def test_media(self):
         global answer
         answer = 0
         os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs"))
-        os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs", "figs"))       
+        os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs", "figs"))
         figures = [\
             os.path.join(os.getcwd(), "tests", "files", "a.png"),
             os.path.join(os.getcwd(), "tests", "files", "figs", "a.png"),
@@ -222,13 +224,13 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
             os.path.abspath("dot_test"), "default.db_media", "figs", "a.png"))
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
-            (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 3      
+            (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 3
 
     def test_media_missing(self):
         global answer
         answer = 0
         os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs"))
-        os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs", "figs"))       
+        os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs", "figs"))
         figures = [\
             os.path.join(os.getcwd(), "tests", "files", "a.png"),
             os.path.join(os.getcwd(), "tests", "files", "figs", "a.png")]
@@ -243,7 +245,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
             (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 2
-        
+
     def test_media_missing_2(self):
         global answer
         answer = 0
@@ -256,12 +258,12 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
             (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 0
-        
+
     def test_media_slashes(self):
         global answer
         answer = 0
         os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs"))
-        os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs", "figs"))       
+        os.mkdir(os.path.join(os.getcwd(), "tests", "files", "figs", "figs"))
         figures = [\
             os.path.join(os.getcwd(), "tests", "files", "a.png"),
             os.path.join(os.getcwd(), "tests", "files", "figs", "a.png"),
@@ -278,7 +280,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
             os.path.abspath("dot_test"), "default.db_media", "figs", "a.png"))
         assert self.database().con.execute(\
             "select count() from log where event_type=?",
-            (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 3  
+            (EventTypes.ADDED_MEDIA_FILE, )).fetchone()[0] == 3
 
     def test_sound(self):
         global answer
@@ -310,7 +312,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
           """<img src_missing="maps/Netherlands-Provinces/Drenthe.png">"""
         assert card.fact["blank"] == \
           """<img src_missing="maps/Netherlands-Provinces/Netherlands-Provinces.png">"""
-        
+
     def test_dups(self):
         global answer
         answer = 0
@@ -321,7 +323,7 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
                u"""<b>Freistaat Th\xfcringen (Free State of Thuringia)</b>"""
         assert self.review_controller().card.tag_string() == "Germany: States, MISSING_MEDIA"
 
-    def test_anon_id(self):        
+    def test_anon_id(self):
         global answer
         answer = 0
         filename = os.path.join(os.getcwd(), "tests", "files", "anon_id.xml")
@@ -330,8 +332,24 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         fact = self.review_controller().card.fact
         for card in self.database().cards_from_fact(fact):
             assert not card.id.startswith("_")
-            
-    def test_no_id(self):        
+        assert self.database().card_count() == 2
+
+    def test_anon_id_2(self):
+        global answer, last_error
+        answer = 0
+        last_error = None
+        filename = os.path.join(os.getcwd(), "tests", "files", "anon_id.xml")
+        self.xml_importer().do_import(filename)
+        assert last_error == None
+        self.xml_importer().do_import(filename)
+        assert last_error == None
+        self.review_controller().reset()
+        fact = self.review_controller().card.fact
+        for card in self.database().cards_from_fact(fact):
+            assert not card.id.startswith("_")
+        assert self.database().card_count() == 4
+
+    def test_no_id(self):
         global answer
         answer = 0
         filename = os.path.join(os.getcwd(), "tests", "files", "no_id.xml")
@@ -340,23 +358,23 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         fact = self.review_controller().card.fact
         for card in self.database().cards_from_fact(fact):
             assert card.id
-            
-    def test_bad_xml(self):        
+
+    def test_bad_xml(self):
         global answer
         answer = 0
         filename = os.path.join(os.getcwd(), "tests", "files", "bad_xml.xml")
         self.xml_importer().do_import(filename)
         assert last_error.startswith("Unable to parse")
-        
-    def test_tags(self):        
+
+    def test_tags(self):
         global answer
         answer = 0
         filename = os.path.join(os.getcwd(), "tests", "files", "tag.xml")
         self.xml_importer().do_import(filename, extra_tag_name="extra")
         self.review_controller().reset()
         assert len(self.review_controller().card.tags) == 2
-        
-    def test_log(self):        
+
+    def test_log(self):
         global answer
         answer = 0
         filename = os.path.join(os.getcwd(), "tests", "files", "sound.xml")
@@ -364,14 +382,14 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
         ids = [cursor[0] for cursor in self.database().con.execute(\
             "select distinct object_id from log where event_type='6' or event_type='7'")]
         assert ids == ['ef2e21e1']
-        
+
     def teardown(self):
         global answer
         answer = 0
         filename = os.path.join(os.getcwd(), "tests", "files", "basedir_bz2",
                                     "DIRECTORY_NO_LONGER_USED_BY_MNEMOSYNE2")
         if os.path.exists(filename):
-            os.remove(filename)        
+            os.remove(filename)
         filename = os.path.join(os.getcwd(), "tests", "files", "a.png")
         if os.path.exists(filename):
             os.remove(filename)
@@ -383,5 +401,5 @@ class TestMnemosyne1XMLImport(MnemosyneTest):
             shutil.rmtree(dirname)
         dirname = os.path.join(os.getcwd(), "tests", "files", "soundfiles")
         if os.path.exists(dirname):
-            shutil.rmtree(dirname)        
+            shutil.rmtree(dirname)
         MnemosyneTest.teardown(self)
