@@ -23,14 +23,14 @@ class MyReviewWidget(ReviewWidget):
     def redraw_now(self):
         pass
 
-    
+
 class TestReviewController(MnemosyneTest):
 
     def setup(self):
         global expected_scheduled_count
         expected_scheduled_count = None
         shutil.rmtree("dot_test", ignore_errors=True)
-        
+
         self.mnemosyne = Mnemosyne(upload_science_logs=False, interested_in_old_reps=True)
         self.mnemosyne.components.insert(0,
            ("mnemosyne.libmnemosyne.translators.gettext_translator", "GetTextTranslator"))
@@ -42,9 +42,8 @@ class TestReviewController(MnemosyneTest):
             ("mnemosyne.libmnemosyne.ui_components.dialogs", "EditCardDialog"))
         self.mnemosyne.initialise(os.path.abspath("dot_test"),  automatic_upgrades=False)
         self.review_controller().reset()
-   
+
     def test_1(self):
-        self.review_controller().heartbeat()
         card_1 = None
         self.review_controller().reset()
         for i in range(10):
@@ -53,19 +52,19 @@ class TestReviewController(MnemosyneTest):
             if i % 2:
                 card_type = self.card_type_with_id("1")
             else:
-                card_type = self.card_type_with_id("2")            
+                card_type = self.card_type_with_id("2")
             card = self.controller().create_new_cards(fact_data, card_type,
                     grade=4, tag_names=["default" + str(i)])[0]
             if i == 0:
                 card_1 = card
-                card.next_rep -= 1000 * 24 * 60 * 60 
+                card.next_rep -= 1000 * 24 * 60 * 60
                 self.database().update_card(card)
         self.review_controller().set_render_chain("default")
         self.review_controller().show_new_question()
         self.review_controller().reset_but_try_to_keep_current_card()
-        self.review_controller().show_answer()        
+        self.review_controller().show_answer()
         assert self.review_controller().card == card_1
-        assert self.review_controller().counters() == (1, 0, 15)       
+        assert self.review_controller().counters() == (1, 0, 15)
         self.review_controller().grade_answer(0)
         assert self.review_controller().counters() == (0, 1, 15)
         self.review_controller().grade_answer(2)
@@ -83,7 +82,7 @@ class TestReviewController(MnemosyneTest):
             if i % 2:
                 card_type = self.card_type_with_id("1")
             else:
-                card_type = self.card_type_with_id("2")            
+                card_type = self.card_type_with_id("2")
             card = self.controller().create_new_cards(fact_data, card_type,
                     grade=4, tag_names=["default" + str(i)])[0]
             if i == 0:
@@ -92,13 +91,13 @@ class TestReviewController(MnemosyneTest):
                 self.database().update_card(card)
         self.review_controller().show_new_question()
         assert self.review_controller().card == card_1
-        self.review_controller().reload_counters()        
-        assert self.review_controller().counters() == (1, 0, 15)       
+        self.review_controller().reload_counters()
+        assert self.review_controller().counters() == (1, 0, 15)
         self.review_controller().grade_answer(0)
-        self.review_controller().reload_counters()  
+        self.review_controller().reload_counters()
         assert self.review_controller().counters() == (0, 1, 15)
         self.review_controller().grade_answer(2)
-        self.review_controller().reload_counters()  
+        self.review_controller().reload_counters()
         assert self.review_controller().counters() == (0, 0, 15)
 
         self.mnemosyne.review_widget().set_grade_enabled(1, True)
@@ -107,17 +106,17 @@ class TestReviewController(MnemosyneTest):
         card_type = self.card_type_with_id("1")
         fact_data = {"f": "1", "b": "b"}
         card = self.controller().create_new_cards(fact_data, card_type,
-                     grade=-1, tag_names=["forbidden"])[0]     
+                     grade=-1, tag_names=["forbidden"])[0]
         self.review_controller().show_new_question()
         assert self.review_controller().card == card
-        
+
         c = DefaultCriterion(self.mnemosyne.component_manager)
         c.deactivated_card_type_fact_view_ids = set()
         c._tag_ids_active = set([self.database().get_or_create_tag_with_name("active")._id])
         c._tag_ids_forbidden = set([self.database().get_or_create_tag_with_name("forbidden")._id])
         self.database().set_current_criterion(c)
         assert self.database().active_count() == 0
-        
+
         assert self.review_controller().card == card
         self.review_controller().reset_but_try_to_keep_current_card()
         assert self.review_controller().card is None
@@ -128,17 +127,17 @@ class TestReviewController(MnemosyneTest):
             fact_data = {"f": data, "b": data}
             self.controller().create_new_cards(fact_data, card_type, grade=-1, tag_names=[])
         self.review_controller().show_new_question()
-        self.review_controller().show_answer()        
+        self.review_controller().show_answer()
         for i in range(5):
             self.review_controller().grade_answer(0)
-            self.review_controller().show_answer()  
+            self.review_controller().show_answer()
         for i in range(2):
             self.review_controller().grade_answer(2)
-            self.review_controller().show_answer() 
+            self.review_controller().show_answer()
         for i in range(6):
             self.review_controller().grade_answer(0)
             self.review_controller().show_answer()
-            
+
     def test_counters(self):
         global expected_scheduled_count
         card_type = self.card_type_with_id("1")
@@ -155,7 +154,7 @@ class TestReviewController(MnemosyneTest):
         self.review_controller().grade_answer(0)
         assert self.review_controller().scheduled_count == 0
         assert self.review_controller().counters()[0] == 0
-        
+
     def test_counters_prefetch(self):
         global expected_scheduled_count
         card_type = self.card_type_with_id("1")
@@ -171,5 +170,5 @@ class TestReviewController(MnemosyneTest):
         self.review_controller().show_answer()
         expected_scheduled_count = 3
         self.review_controller().grade_answer(3)
-        assert self.review_controller().scheduled_count == 3        
-        assert self.review_controller().counters()[0] == 3            
+        assert self.review_controller().scheduled_count == 3
+        assert self.review_controller().counters()[0] == 3
